config/test-servers/custom-response-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-custom-response-route
  namespace: 'mcp-test'
  labels:
    mcp-server: 'true'
spec:
  parentRefs:
    - name: mcp-gateway
      namespace: gateway-system
  hostnames:
    - 'custom-response.mcp.local' #note This is purely for internal routing by Envoy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mcp-custom-response
          port: 9090
